--- a/HWGraph/index.html
+++ b/HWGraph/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/renderer.jsx"></script>
+    <script type="module" src="/src/renderer.tsx"></script>
   </body>
 </html>
